# fastapi-jwt-auth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/migrations/: env.py
alembic/migrations/versions/: 0bc94fe207b2_add_expire_at_to_refreshtoken.py
alembic/versions/: 2acf33146be2_init_revision.py
dokcer/dev/app/: Dockerfile
dokcer/prod/app/: Dockerfile
src/api/schemes/: __init__.py  auth_schemes.py
src/api/v1/dependencies/: __init__.py  access_token.py  db.py  services.py
src/api/v1/handlers/: __init__.py  auth_handlers.py
src/core/: __init__.py
src/core/configs/: __init__.py  _env_file.py  auth_config.py  db_config.py
src/core/dto/: __init__.py  access_refresh_tokens_dto.py  access_token_dto.py  user_dto.py
src/core/mappers/: __init__.py  access_token_mapper.py  user_mappers.py
src/core/security/: __init__.py  access_token_coder.py  hasher.py
src/core/utils/: __init__.py  datetime.py
src/infrastructure/: __init__.py
src/infrastructure/db/: __init__.py
src/infrastructure/db/connections/: __init__.py  engine_session.py
src/infrastructure/db/dals/: __init__.py  auth_dal.py  user_dal.py
src/infrastructure/db/models/: __init__.py  base.py  refresh_token.py  user.py
src/services/: auth_service.py  user_service.py
